--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "${workspaceFolder}\\env\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Laper\\AppData\\Local\\Continuum\\anaconda3\\python.exe"
 }
