attempt use a different pipeline set of tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,24 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+
 strategy:
   matrix:
+    linux:
+      imageName: "ubuntu-16.04"
+      imageName: "RedHat:RHEL:7.4:7.4.2019041718"
+    mac:
+      imageName: "macos-10.13"
+    windows:
+      imageName: "vs2017-win2016"
     Python36:
       python.version: '3.6'
     Python37:
       python.version: '3.7'
+  maxParallel: 3
+
+pool:
+  vmImage: $(imageName)
 
 steps:
 - task: UsePythonVersion@0
